--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,16 @@
  *
  * Made By MaterializeCSS.com
  */
+ 
 
+ .register {
+  width: 30%;
+  display: grid;
+  transform: translate(0%,0%);
+  top: 50%;
+  /* left: 50%; */
+  position: relative;}
+  
 .icon-block {
   padding: 0 15px;
 }
